# Warp

./: .gitignore  BAR_DT-OP10.xlsx  BAR_FT-OP10.xlsx  BAR_PT-OP10.xlsx  BAR_TT-OP10.xlsx  CONCLUSAO_FINAL.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_PLAN_UI_ADVANCED.md  IMPLEMENTATION_SUMMARY.md  MEMORIAL_TECNICO_COMPLETO.md  Original.xlsx  PLANO_IMPLEMENTACAO_UX_UI.md  PLN_DT-OP10.xlsx  PLN_FT-OP10.xlsx  PLN_PT-OP10.xlsx  PLN_TT-OP10.xlsx  Plano de desenvolvimento.md  Plano de desenvolvimento_1.md  README_IMPLEMENTACAO.md  RELATORIO_AUDITORIA_UX_UI.md  RESUMO_AUDITORIA_E_MELHORIAS.md  TASK_COMPLETE.md  TODO_LIST_COMPLETA.md  test_comprehensive_calculations.py  testearc.json
platform_base/: .documentation_complete  .gitignore  .platform.yaml  ANALISE_CRITICIDADE_UI.md  ANALISE_CRITICIDADE_UI_COMPLETA.md  AUDITORIA_TECNICA_COMPLETA.md  BUG_FIX_SUMMARY.md  DEBUG_REPORT_COMPLETE.md  DIAGNOSTICO_TESTES.md  FASE2_STATUS.md  IMPACT_ANALYSIS.md  MIGRATION_STATUS.md  PRODUCTION_READINESS_SUMMARY.md  PR_REVIEW_CHECKLIST.md  README.md  RELATORIO_EVIDENCIAS.md  RELATORIO_TESTES_COMPLETO.md  RELEASE_NOTES.md  RESOLUCAO_PR.md  RESUMO_AUDITORIA.md  SECURITY_SUMMARY.md  TEST_COVERAGE_REPORT.md  TODO_AUDITORIA_COMPLETA.md  TODO_TESTES_95_COBERTURA.md  coverage_report.txt  debug_app.py  debug_ui_update.py  demo_legend_colors.py  launch_app.py  launch_app_simple.py  project_status.py  project_status_simple.py  pyproject.toml  run_app.py  test_all_features.py  test_app.py  test_combobox.py  test_debug.py  test_direct_load.py  test_final_load.py  (+16 more)
platform_base/.dash_cache/: cache.db  cache.db-shm  cache.db-wal
platform_base/.hypothesis/constants/: 005202160d61b331  051cc309f60fb095  0597314d4df1d8cb  078e13249b4a6cd7  07d0871b729c0e25  0836bee82d7501b3  0908a18cab16ccc8  0b8bc57bdc850e14  0c1e377fa48dc379  0e769c0a256c63ad  105fdfdf69164024  1086ccc467e86089  11fa1269254074fe  122146cd14d5f368  12b579d093705800  1307d3cb08f388dc  15312ffa40cd6dfa  15591a7fa46b9b17  1623fe06bba610c7  164979f1fd1e6b5f  190188851b2201b4  1e2a4212f9d9df7f  1e4fc12dcd8025ad  22db8201854fb43a  2382c7529b5cec5d  244927137dbd9598  27a5ea1511f4698b  27c2b5f5c9571e7e  287106692c0a54b3  29904a9ba8c3378a  29afed738f027135  29ffa5ad1ba0f052  2ac1d14642675b5b  2fb70e53601af27e  2ff2fc9d2629277e  302b6912e8b4fc61  306d60dd7a1eff6c  3400a1b1ec96ec67  34c69ea674c74992  36197590ef7a9511  (+134 more)
platform_base/.platform_config/: config_schema.json
platform_base/.platform_config/system/: platform.yaml
platform_base/.platform_config/user/: default.yaml
platform_base/configs/: platform.yaml
platform_base/docs/: API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_DEVELOPMENT.md  TROUBLESHOOTING.md  UI_MIGRATION.md  USER_GUIDE.md  USER_MANUAL.md
platform_base/docs/examples/: cache_integration_example.py  disk_cache_example.py
platform_base/docs/ux_ui_redesign/: PROPOSTA_UX_UI.md  RESUMO_EXECUTIVO.md  SPRINT1_ITEM006_COMPLETED.md
platform_base/examples/: README.md  data_panel_refactored_example.py
platform_base/plugins/: README.md  _base.py
platform_base/plugins/advanced_sync/: __init__.py  dtw_plugin.py  manifest.json
platform_base/plugins/dtw_plugin/: README.md  manifest.json  plugin.py  test_plugin.py
platform_base/scripts/: auto_migrate_ui.py  compile_ui.py  complete_ui_files.py  connect_ui_files.py  generate_ui_files.py  migrate_to_ui.py  simple_performance_test.py  validate_all.py  validate_performance.py  validate_simple.py  validate_ui_files.py  validate_ui_migration.py
platform_base/src/platform_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
platform_base/test_profiling/: platform_base_processing_downsampling_downsample_1769819703.txt  platform_base_processing_downsampling_downsample_1769819704.txt  platform_base_processing_downsampling_downsample_1769902284.txt  platform_base_processing_downsampling_downsample_1770034990.txt  platform_base_processing_downsampling_downsample_1770034993.txt  platform_base_processing_downsampling_downsample_1770034999.txt  platform_base_processing_downsampling_downsample_1770035000.txt  platform_base_processing_downsampling_downsample_1770035001.txt  platform_base_processing_downsampling_downsample_1770035004.txt  platform_base_processing_downsampling_downsample_1770044808.txt  platform_base_processing_downsampling_downsample_1770072200.txt  platform_base_processing_downsampling_downsample_1770072201.txt  platform_base_processing_downsampling_downsample_1770072482.txt  platform_base_processing_downsampling_downsample_1770072483.txt  platform_base_processing_downsampling_downsample_1770072585.txt  platform_base_processing_downsampling_downsample_1770072586.txt  platform_base_processing_downsampling_downsample_1770072783.txt  platform_base_processing_downsampling_downsample_1770072784.txt  platform_base_processing_downsampling_downsample_1770072886.txt  platform_base_processing_downsampling_downsample_1770072887.txt  platform_base_processing_downsampling_downsample_1770072992.txt  platform_base_processing_interpolation_interpolate_1770035362.txt  platform_base_processing_interpolation_interpolate_1770035702.txt  platform_base_processing_interpolation_interpolate_1770036060.txt  platform_base_processing_interpolation_interpolate_1770036415.txt  platform_base_processing_interpolation_interpolate_1770036737.txt  platform_base_processing_interpolation_interpolate_1770037059.txt  platform_base_processing_interpolation_interpolate_1770037376.txt  test_profiling_fast_function_1768858074.prof  test_profiling_fast_function_1768858173.prof  test_profiling_fast_function_1768858361.prof  test_profiling_fast_function_1768858451.prof  test_profiling_fast_function_1768858601.prof  test_profiling_fast_function_1768859383.prof  test_profiling_fast_function_1768859404.prof  test_profiling_fast_function_1768859461.prof  test_profiling_fast_function_1768859589.prof  test_profiling_fast_function_1768859718.prof  test_profiling_fast_function_1768859837.prof  test_profiling_fast_function_1769099374.prof  (+63 more)
platform_base/tests/: conftest.py  test_ui_integration.py
(+606 files in other folders)
